Trying to get the columns to flow

--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ div.orange {
     background:#CC6600;
     min-height: 800px;
 }
+
+.left-nav
+{
+    background: #FF9900;
+    border-bottom-color: #FF9900;
+    border-bottom-width: 1px;
+    border-bottom-style: solid; 
+    height: 666px;
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{
     display:block
 }
