Make FB icon a bit smaller on the smaller screen size.

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ div.btn-toolbar .current-menu-item.active:not(.menu-item-has-children)
 #facbook-button {
     max-height: 50px;
     max-width: 50px;
+    width: 80%;
 }
 
 /* responsive text queries */
