--- a/style.css
+++ b/style.css
@@ -3,11 +3,91 @@
  * Description: Livermore Community Thanksgiving Dinner
  * Author: Rob Weaver
  * Author URI: http://www.accuweaver.com
- * Version: 1.0.1
+ * Version: 1.0.2
  * Tags: blue, gray, light, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-header, editor-style, featured-images, flexible-header, threaded-comments, translation-ready
  * License: GPLv3
  * License URI: http://www.gnu.org/licenses/gpl.html
  */
+
+
+/* =WordPress Core
+-------------------------------------------------------------- */
+.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.aligncenter,
+div.aligncenter {
+    display: block;
+    margin: 5px auto 5px auto;
+}
+
+.alignright {
+    float:right;
+    margin: 5px 0 20px 20px;
+}
+
+.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+a img.alignright {
+    float: right;
+    margin: 5px 0 20px 20px;
+}
+
+a img.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+a img.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+a img.aligncenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.wp-caption {
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    max-width: 96%; /* Image does not overflow the content area */
+    padding: 5px 3px 10px;
+    text-align: center;
+}
+
+.wp-caption.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignleft {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignright {
+    margin: 5px 0 20px 20px;
+}
+
+.wp-caption img {
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    max-width: 98.5%;
+    padding: 0;
+    width: auto;
+}
+
+.wp-caption p.wp-caption-text {
+    font-size: 11px;
+    line-height: 17px;
+    margin: 0;
+    padding: 0 4px 5px;
+}
+
 .inverse {
     color: white;
 }
@@ -99,6 +179,9 @@ div.btn-toolbar .current-menu-item.active:not(.menu-item-has-children)
     width: 80%;
 }
 
+ul li {
+    margin-bottom:1em;
+}
 /* responsive text queries */
 @media screen and (max-width: 992px) {
   .btn,input,div,span,h4 {
